# mask-detector

./: .gitignore  CMakeLists.txt  README.md  SCHEDULE.txt  gui.mac  init_vis.mac  main.cc
action/: CMakeLists.txt  EventAction.cc  EventAction.hh  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.hh  RunAction.cc  RunAction.hh
analysis/: AnalysisChain.cc  AnalysisChain.hh  CMakeLists.txt  ConformalMap.hh  EnergyDeposit.hh  Module.cc  Module.hh  ObjectStore.cc  ObjectStore.hh  SampleModule.hh  Seeding.hh  demangle.cc  demangle.hh
construction/: B2DetectorConstruction.cc  B2TrackerSD.cc  B2aDetectorConstruction.hh  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  MaskDetector.cc  MaskDetector.hh  SensitiveDetector.cc  SensitiveDetector.hh  SimHit.cc  SimHit.hh
objects/: CMakeLists.txt  Cluster.cc  Cluster.hh  DetId.hh  RecHit.cc  RecHit.hh  SimHit.cc  SimHit.hh  Topology.cc  Topology.hh
physics/: CMakeLists.txt  PhysicsList.hh
